--- a/templates/api.html
+++ b/templates/api.html
@@ -1,4 +1,24 @@
-{% extend "base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
+{% if title %}
+<div class="page-header">
+    <h3>{{ title }} {% if small_title %}{{ small_title }}{% endif %}</h3>
+</div>
+{% endif %}
+<div class="row" style="margin-bottom: 10px;">
+    <div class="col-md-12">
+        <button type="submit" class="btn btn-primary json_format">JSON</button>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <pre>{% if response %}{{ response }}{% endif %}</pre>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <pre>{% if request %}{{ request|safe }}{% endif %}</pre>
+    </div>
+</div>
 {% endblock %}
