added wrapper for flask_api

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,8 +10,11 @@
         <p>
         As a developer, manually writing out a long list to inject into a simple dropdown
         seemed completely unnecessary.  Every programming language has, in some form, a US state
-        listing package, however, I thought it might be useful to create a unified API to do all
-        the grunt for developers.
+        listing package or module, however, I thought it might be useful to create a simple API to do all
+        the grunt work for us.
+        </p>
+        <p>
+        Feedback, requests are greatly appreciated. Send any questions to <a href="mailto:neurosnap@gmail.com">me</a>.
         </p>
         <p>
         This service is based on the python package, <a href="https://pypi.python.org/pypi/us/">us</a>.
