--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="/states/">States List</a></li>
-                                <li><a href="/states/abbr/">States List Abbreviations</a></li>
+                                <li><a href="/states/">State List</a></li>
+                                <li><a href="/states/abbr/">State List Abbreviations</a></li>
                                 <li><a href="/state/">State Information</a></li>
                             </ul>
                         </li>
@@ -57,7 +57,7 @@
 
             {% block content %}{% endblock %}
             <hr />
-            Written by <a href="http://neurosnap.net">Eric Bower</a>
+            &#169; Copyright 2014 by <a href="http://neurosnap.net">Eric Bower</a>
             <br /><br />
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
