--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,17 @@
 <div class="row">
     <div class="col-md-12">
         <div class="jumbotron">
-            <h1>USA States API</h1>
+            <h1>US States API</h1>
             <p>
-                This service is a simple API that allows for quick access to basic US State information.
+                This service is a simple programming interface for developers 
+                that allows quick access to basic US State information.
             </p>
-            <p><a class="btn btn-primary btn-lg" role="button" href="/state/">State Information List</a></p>
+            <p>
+                <a class="btn btn-primary btn-lg" role="button" href="/state/">
+                    <span class="glyphicon glyphicon-list"></span>
+                     State Information List
+                </a>
+            </p>
         </div>
     </div>
 </div>
