--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="jumbotron">
-            <h1>US States API</h1>
+            <h1>US State API</h1>
             <p>
                 This service is a simple programming interface for developers 
                 that allows quick access to basic US State information.
