reduced filesize image

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block css %}
 <style>
     .jumbotron {
-        background-image: url({{ url_for('static', filename='america_map.jpg') }});
+        background-image: url({{ url_for('static', filename='america_map_1.jpg') }});
         background-size: 100%;
         color: #fff !important;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black !important;
