--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,13 @@
         <meta name=”description” content=”United States of America States Information API”>
 
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-        <!-- <link href="{{ url_for('static', filename='core.css') }}" rel="stylesheet"> -->
+        <link href="{{ url_for('static', filename='core.css') }}" rel="stylesheet">
         {% block css %}{% endblock %}
 
         <title>USA States API</title>
     </head>
     <body>
-        <nav class="navbar navbar-default" role="navigation">
+        <nav class="navbar navbar-inverse" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
